--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,20 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      เกี่ยวกับเรา
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+<p>
+  นางสาวชนัญธิดา ครึ่งมี <br>
+  นักเรียนระดับชั้น ปวช <br>
+  ชอบกินซูชิ<br>
+  ชอบสีชมพู <br>
+  เพื่อนสนิทชื่อ ป๋องแป้ง ฟา<br>
+  งานอดิเรกดูหนังฟังเพลง<br>
+</p>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+
 </ion-content>
