--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,15 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      ติดต่อ
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+<ion-content class="ion-padding">
+  <ion-icon name="call-outline"></ion-icon> 095-767-0142 <br>
+  <ion-icon name="mail-open-outline"></ion-icon> Cntdkm.kim <ion-icon name="at-outline"></ion-icon>gmail.com <br>
+  <ion-icon name="logo-facebook"></ion-icon> Chanantida Kim <br>
+  <ion-icon name="logo-instagram"></ion-icon> Chanantida_a <br>
+  <ion-icon name="logo-tiktok"></ion-icon> Chanantida_a <br>
 </ion-content>
